--- a/page-resources.html
+++ b/page-resources.html
@@ -89,145 +89,82 @@
         </div>
     </section>
 
-    <section class="faq-section p-t-80">
+    <section class="resources-section p-t-80 p-b-80">
         <div class="container">
-
-            <div class="faq-category p-b-80">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="color-light-blue b-s-30 text-center">Appointments</h2>
-                        <div class="faq-content">
-                            <ul class="faq-list">
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Do I need an appointment or can I walk in?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>How long is a standard appointment?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Do I need an appointment for a repeat prescription for medication?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Do I need an appointment for a specialist referral?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                            </ul>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="resources-left">
+                        <div class="resource-item p-b-40">
+                            <div class="contact-info-icon resource-item-icon">
+                                <img src="img/icon-pdf.png"/>
+                            </div>
+                            <div class="resource-item-content">
+                                <a href="#" class="resource-content-up color-orange">
+                                    Managing COVID-19 at home with assistance from your general practice
+                                </a>
+                                <p>A guide, action plan and symptom diary for patients from The Royal Australian College
+                                    of
+                                    General Practitioners.</p>
+                            </div>
+                        </div>
+                        <div class="resource-item p-b-40">
+                            <div class="contact-info-icon resource-item-icon">
+                                <img src="img/icon-link.png"/>
+                            </div>
+                            <div class="resource-item-content">
+                                <a href="#" class="resource-content-up color-orange">
+                                    COVID-19 Coronavirus: Managing COVID-19
+                                </a>
+                                <p>Information and advice for managing COVID-19 at home and in the Western Australian
+                                    community.</p>
+                            </div>
+                        </div>
+                        <div class="resource-item p-b-40">
+                            <div class="contact-info-icon resource-item-icon">
+                                <img src="img/icon-link.png"/>
+                            </div>
+                            <div class="resource-item-content">
+                                <a href="#" class="resource-content-up color-orange">
+                                    COVID testing clinics
+                                </a>
+                                <p>Testing is available at COVID clinics, regional public hospitals and health services,
+                                    remote health clinics (where COVID clinics are not available) and, private pathology
+                                    centres. PathWest Laboratory Medicine WA is the State approved pathology provider at
+                                    all
+                                    public clinics. Visit the link for locations and opening days and times.</p>
+                            </div>
+                        </div>
+                        <div class="resource-item p-b-40">
+                            <div class="contact-info-icon resource-item-icon">
+                                <img src="img/icon-link.png"/>
+                            </div>
+                            <div class="resource-item-content">
+                                <a href="#" class="resource-content-up color-orange">
+                                    COVID-19: family guide
+                                </a>
+                                <p>Find information on COVID-19, vaccinations and protective hygiene, plus tips to help
+                                    you
+                                    and your family cope through isolation or lockdowns.</p>
+                            </div>
+                        </div>
+                        <div class="resource-item">
+                            <div class="contact-info-icon resource-item-icon">
+                                <img src="img/icon-link.png"/>
+                            </div>
+                            <div class="resource-item-content">
+                                <a href="#" class="resource-content-up color-orange">
+                                    Coronavirus Mental Wellbeing Support Service
+                                </a>
+                                <p>No matter how the COVID-19 pandemic is affecting your mental wellbeing, Beyond Blue
+                                    have
+                                    developed a range of information, strategies and expert advice to help support
+                                    you.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="faq-category p-b-80">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="color-light-blue b-s-30 text-center">Pathology Tests</h2>
-                        <div class="faq-content">
-                            <ul class="faq-list">
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Do I need to make an appointment for a blood test?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                                <h6 class="faq-sub-title color-light-blue">Urgent Advice</h6>
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Can I get my test results over the phone?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                                <h6 class="faq-sub-title color-light-blue">Privacy & Medical records</h6>
-                                <li class="question-row">
-                                    <div class="question">
-                                        <p>Do I need to make an appointment for a blood test?</p>
-                                    </div>
-                                    <div class="answer color-grey">
-                                        <p>The Maldives is a year-round holiday destination with its warm
-                                            and sunny climate, except for October, which is generally a rainy month.
-                                            It’s
-                                            wise to note
-                                            that the months December, January, and February would be a tad bit
-                                            expensive.</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="faq-bottom-para p-b-80">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="faq-bottom-para-content">
-                            <p class="b-s-10">We are constantly striving to improve the quality of our service. We value
-                                your input, and
-                                any suggestion that you may have that could assist the practice in enhancing the quality
-                                of
-                                our service will be reviewed. If you have a problem we would like to hear about it.
-                                Please
-                                feel free to talk to the Practice Manager or you may prefer to write to us. We take your
-                                concerns, suggestions and complaints seriously. We believe that problems are best dealt
-                                within the practice. However if you feel there is a matter you wish to take up outside
-                                the
-                                practice please contact</p>
-                            <a href="https://www.hadsco.wa.gov.au/home/index.cfm" target="_blank" class="color-light-blue">The Health and
-                                Disability Services Complaints Office (HaDSCO)</a>
-                        </div>
-                    </div>
+                <div class="col-md-4">
+                    <img src="img/img-resources-page.jpg" class="img-border-radius" alt="resources-img"/>
                 </div>
             </div>
         </div>
